--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
         <h2>Hi — I'm Medha</h2>
         <p>Recent B.Tech graduate in Computer Science and Engineering with experience in machine learning, data analysis and web development.</p>
         <p class="cta-row">
-          <a class="btn" href="mailto:medhapandi@gmail.com"><i class="fas fa-envelope"></i> Email me</a>
+          <a class="btn" href="mailto:medhapandi@gmail.com"><i class="fas fa-envelope"></i> Mail me</a>
           <a class="btn ghost" href="Medha rs.pdf" download><i class="fas fa-download"></i> Download Resume</a>
         </p>
       </div>
@@ -685,7 +685,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>Made with ❤️ — Medha P • Hosur, Tamil Nadu</p>
+      <p>Medha P • Hosur, Tamil Nadu</p>
     </div>
   </footer>
 
