--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
   <main>
     <section class="hero container">
       <div class="hero-left">
-        <h2>Hi — I'm Medha</h2>
+        <h2>Hi I'm Medha</h2>
         <p>Recent B.Tech graduate in Computer Science and Engineering with experience in machine learning, data analysis and web development.</p>
         <p class="cta-row">
           <a class="btn" href="mailto:medhapandi@gmail.com"><i class="fas fa-envelope"></i> Mail me</a>
